# Aeolus

./: .gitignore  README.md
Battery_charger/Simulations/: Lap_Power_supply.raw
GS_Monitor_/: pyproject.toml
GS_controller/Hardware/GS_controller/: Comkicad_sch.kicad_sch  Controller.kicad_sch  GS_controller.kicad_pcb  GS_controller.kicad_prl  GS_controller.kicad_pro  GS_controller.kicad_sch  _autosave-GS_controller.kicad_pcb  fp-lib-table
GS_controller/Hardware/GS_controller/Libary/: ESC_Library.bak  FC_Library.bak  FC_Library.kicad_sym
GS_monitor/V1/src/: PyQtGraph.py  Serial_manager.py
GS_monitor/V1/src/__pycache__/tests/: arduino_uno.c  dash.py
Groundstation/Console/: config.py  console.py  data.csv  data.json  serial_handler.py
Groundstation/Hardware/GS_controller/: GS_controller.kicad_pcb  GS_controller.kicad_prl  GS_controller.kicad_pro  Power.kicad_sch  sym-lib-table
Groundstation/Hardware/GS_controller/bom/: ibom.html
Groundstation/Plotting/Grafana/: pyproject.toml
Groundstation/Plotting/Grafana/src/: MongoDB.py  Serial_Handler.py
Groundstation/Plotting/QTgraph/: pyproject.toml
Groundstation/Plotting/QTgraph/V1/src/: PyQtGraph.py
Groundstation/Plotting/QTgraph/V1/src/__pycache__/tests/: PyQtGraph_demo_sine.py  cube.py  plotly.py  streamlit.py
Order/01FC_ESC_GS/: Flight_Controller.kicad_prl
Order/01FC_ESC_GS/Boom/: ESC.csv  Flight_Controller_pretty.xlsx
Order/01FC_ESC_GS/Gerber/: Flight_Controller-B_Adhesive.gbr  Flight_Controller-B_Paste.gbr  Flight_Controller-B_Silkscreen.gbr  Flight_Controller-Edge_Cuts.gbr  Flight_Controller-F_Adhesive.gbr  Flight_Controller-F_Cu.gbr  Flight_Controller-F_Mask.gbr  Flight_Controller-F_Silkscreen.gbr  Flight_Controller-In1_Cu.gbr  Flight_Controller-NPTH.drl  Flight_Controller-PTH.drl  Flight_Controller-job.gbrjob
Orga/Orders/01FC_ESC_GS/: Flight_Controller.csv  Flight_Controller.kicad_pcb  Flight_Controller.kicad_prl  Flight_Controller.kicad_pro  fp-lib-table
Orga/Orders/01FC_ESC_GS/Boom/: Boom_PRETTY.xlsx  Flight_Controller.csv  GS_controller.csv
Orga/Orders/01FC_ESC_GS/Gerber/: Flight_Controller-B_Cu.gbr  Flight_Controller-B_Mask.gbr  Flight_Controller-F_Paste.gbr  Flight_Controller-In2_Cu.gbr
S3-S4_Battery_Charger/S3-S4_Battery_Charger/: S3-S4_Battery_Charger.kicad_pcb  S3-S4_Battery_Charger.kicad_prl  S3-S4_Battery_Charger.kicad_pro  S3-S4_Battery_Charger.kicad_sch
S3-S4_Battery_Charger/Simulations/: Lap_Power_supply.asc  Lap_Power_supply.op.raw
STM32_ESC/Hardware/ESC/: #auto_saved_files#  ESC.kicad_pcb  ESC.kicad_prl  ESC.kicad_pro  ESC.kicad_sch  ESC.step  _autosave-ESC.kicad_sch
STM32_ESC/Hardware/ESC_V1/: ESC.kicad_pcb  ESC.kicad_prl  ESC.kicad_pro  ESC.kicad_sch  _autosave-ESC.kicad_pcb  fp-info-cache
STM32_ESC/Hardware/ESC_V1 .1/: ESC.kicad_pcb  ESC.kicad_prl  ESC.kicad_pro  ESC.kicad_sch  ESC.kicad_sch-bak  Exports.kicad_jobset  fp-info-cache  ~_autosave-ESC.kicad_pcb.lck
STM32_ESC/Hardware/ESC_V1 .1/documentation/: ERC
STM32_ESC/Hardware/ESC_V1.1/: #auto_saved_files#  ESC.kicad_pcb  ESC.kicad_prl  ESC.kicad_sch  ESCV1_1.kicad_pcb  ESCV1_1.kicad_pro  ESCV1_1.kicad_sch  ESC_V1.1.kicad_pro  ESC_V1.1.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~ESC.kicad_pcb.lck  ~_autosave-ESC.kicad_pcb.lck
STM32_ESC/Hardware/ESC_V1.1/bom/: ibom.html
STM32_ESC/Hardware/ESC_V1/Libary/: ESC_Library.kicad_sym
STM32_ESC/Hardware/ESC_V2/: ESC_V2.kicad_pcb  ESC_V2.kicad_prl  ESC_V2.kicad_pro  ESC_V2.kicad_sch  fp-info-cache
STM32_ESC/Software/ESC-FIRMWARE-V1/: .mxproject  CMakeCache.txt  CMakeLists.txt  ESC-FIRMWARE-V1.ioc  STM32L412CBUx_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json
STM32_ESC/Software/ESC-FIRMWARE-V1/Inc/: main.h  stm32l4xx_it.h  usbd_conf.h
STM32_ESC/Software/ESC-FIRMWARE-V1/STM32CubeIDE/: .cproject  .project  STM32L412CBUX_FLASH.ld
STM32_ESC/Software/ESC-FIRMWARE-V1/Src/: COM.c  Notes on Comiling.txt  debug.c  main.c  stm32l4xx_hal_msp.c  usbd_conf.c  usbd_desc.c  utilitifunctions.c
STM32_ESC/Software/ESC-FIRMWARE-V2/: .mxproject  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  ESC.elf  ESC.hex  ESC.ioc  ESC.map  Makefile  STM32L412XX_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json  stm32l412cbux_flash.ld
STM32_ESC/Software/ESC-FIRMWARE-V2/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  usbd_conf.h
STM32_ESC/Software/ESC-FIRMWARE-V2/LinuxTerminal/: console.py  console_rich.py
STM32_ESC/Software/ESC-FIRMWARE-V2/Serial_Terminal/: console_rich.py
STM32_ESC/Software/ESC-FIRMWARE-V2/Src/: adc.c  gpio.c  i2c.c  main.c  stm32l4xx_it.c  tim.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
STM32_ESC/Software/ESC-FIRMWARE-V2/cmake/: gcc-arm-none-eabi.cmake
STM32_ESC/Software/ESC-FIRMWARE-V2/debugf_vcp/: debugf_vcp.c  debugf_vcp.h
STM32_ESC/Software/ESC/V1/: .project  ESC_V1.ioc
STM32_ESC/Software/FC_FIMWARE_V1/: .mxproject  FC_FIMWARE_V1.ioc
STM32_ESC/Software/FC_FIMWARE_V1/STM32CubeIDE/: .project
STM32_FC/Hardware/Flight_Controller/: Com.kicad_sch  Flight_Controller.kicad_pcb  Flight_Controller.kicad_pro  Flight_Controller.kicad_sch  Flight_controller.kicad_prl  Power.kicad_sch  STM32L412CBUx.kicad_sch  Sensors.kicad_sch  ~Flight_Controller.kicad_sch.lck
STM32_FC/Hardware/Flight_Controller/Libary/: FC_Library.bak
STM32_FC/Hardware/Flight_Controller/bom/: ibom.html
STM32_FC/Software/FIRMWARE_FC_V1/: .mxproject  CMakeCache.txt  CMakeLists.txt  FC_FIMWARE_V1.ioc  build.ninja  cmake_install.cmake  compile_commands.json  stm32l412cbux_flash.ld
STM32_FC/Software/FIRMWARE_FC_V1/cmake/: gcc-arm-none-eabi.cmake
STM32_FC/Software/FIRMWARE_FC_V1/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
STM32_FC/Software/FIRMWARE_FC_V1/debugConsole/: console.c  console.h  i2c_scan.c  packet.c
STM32_FC/Software/Kalman Filter/: Kalman.py  Untitled-1.py  mpu6050_millis.csv
STM32_FC/Software/Kalman Filter/Serial Logger/: serialListener.py
STM32_FC/Software/Kalman Filter/Test Data/: mpu6050 raw data.txt  mpu6050_millis.txt
STM32_FC/Software/V1/: .project  Drone_FC_V1.ioc
(+83 files in other folders)
